FE: fresh card view: dropdown fixed + report abuse, footer aligned

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -17,6 +17,7 @@
 @import (inline) '@{bower}bootstrap-additions/dist/modules/aside.css';
 @import (inline) '@{bower}angular/angular-csp.css';
 @import (inline) '@{bower}sweetalert/dist/sweetalert.css';
+@import (inline) '@{bower}angular-toastr/dist/angular-toastr.css';
 
 @import '@{assets}/less/main';
 
