--- a/src/assets/less/bootstrap-custom.less
+++ b/src/assets/less/bootstrap-custom.less
@@ -26,7 +26,7 @@
 
 // Components
 @import "@{bootstrap}component-animations.less";
-// @import "@{bootstrap}dropdowns.less";
+@import "@{bootstrap}dropdowns.less";
 @import "@{bootstrap}button-groups.less";
 // @import "@{bootstrap}input-groups.less";
 @import "@{bootstrap}navs.less";
@@ -49,8 +49,8 @@
 
 // Components w/ JavaScript
 // @import "@{bootstrap}modals.less";
-// @import "@{bootstrap}tooltip.less";
-// @import "@{bootstrap}popovers.less";
+@import "@{bootstrap}tooltip.less";
+@import "@{bootstrap}popovers.less";
 // @import "@{bootstrap}carousel.less";
 
 // Utility classes
