--- a/src/assets/less/components/cards.less
+++ b/src/assets/less/components/cards.less
@@ -108,12 +108,19 @@
                 line-height: 29px;
             }
             text-decoration: none;
-
+            margin-left: 10px;
         }
 
-        > div {
-            // display: block;
-            // float: left;
+        .dropdown {
+            display: inline-block;
+            button {
+                border: 0;
+                background: initial;
+                outline: none;
+            }
+            a {
+                outline: none;
+            }
         }
     }
 }
